--- a/app/views/vcards/_form.html.haml
+++ b/app/views/vcards/_form.html.haml
@@ -1,4 +1,7 @@
 = f.semantic_fields_for :vcard do |vcard|
   = vcard.input :full_name, :input_html => {"data-autofocus" => true}
   = vcard.semantic_fields_for :address do |address|
-    = address.inputs :street_address, :extended_address, :postal_code, :locality
+    = address.input :street_address
+    = address.input :extended_address
+    = address.input :postal_code
+    = address.input :locality
