Move exteded_address before street address, add post_office_box in form and view.

--- a/app/views/vcards/_show.html.haml
+++ b/app/views/vcards/_show.html.haml
@@ -3,8 +3,9 @@
 - vcard ||= @vcard
 - vcard ||= resource.try(:vcard) if defined?(resource)
 = show_for vcard do |vcard|
-  = vcard.attribute :street_address
   = vcard.attribute :extended_address
+  = vcard.attribute :street_address
+  = vcard.attribute :post_office_box
   = vcard.attribute :postal_code
   = vcard.attribute :locality
   = vcard.attribute :country_name
