--- a/app/views/vcards/_form.html.haml
+++ b/app/views/vcards/_form.html.haml
@@ -1,6 +1,6 @@
-= f.semantic_fields_for :vcard do |vcard|
+= f.fields_for :vcard do |vcard|
   = vcard.input :full_name, :input_html => {"data-autofocus" => true}
-  = vcard.semantic_fields_for :address do |address|
+  = vcard.fields_for :address do |address|
     = address.input :extended_address
     = address.input :street_address
     = address.input :post_office_box
