--- a/app/views/vcards/_form.html.haml
+++ b/app/views/vcards/_form.html.haml
@@ -1,4 +1,4 @@
-= f.fields_for :vcard do |vcard|
+= f.simple_fields_for :vcard do |vcard|
   = vcard.input :full_name, :input_html => {"data-autofocus" => true}
   = vcard.fields_for :address do |address|
     = address.input :extended_address
