--- a/app/views/vcards/_directory_matches.html.haml
+++ b/app/views/vcards/_directory_matches.html.haml
@@ -1,4 +1,4 @@
 - matches = vcard.send("#{match_type}_matches") - @seen_matches
 - if matches.present?
   - @seen_matches += matches
-  = render :partial => 'address', :collection => matches
+  = render :partial => 'address', :collection => matches, :locals => {:vcard => vcard}
