--- a/app/views/vcards/_directory_lookup.html.haml
+++ b/app/views/vcards/_directory_lookup.html.haml
@@ -18,4 +18,4 @@
       = render 'directory_matches', :vcard => vcard, :match_type => :locality
 
   .modal-footer
-    = link_to 'Abbrechen', '#', :class => 'btn', 'data-dismiss' => 'modal'
+    = link_to t_action(:cancel), '#', :class => 'btn', 'data-dismiss' => 'modal'
