--- a/app/views/vcards/directory_lookup.js.erb
+++ b/app/views/vcards/directory_lookup.js.erb
@@ -1,4 +1,4 @@
 $('#directory_lookup').remove();
 
-$('body').append('<%=j render "directory_lookup", :vcard => @vcard %>');
+$('body').append('<%=j render "vcards/directory_lookup", :vcard => @vcard %>');
 $('#directory_lookup').modal({show: true});
