--- a/app/views/phone_numbers/_form.html.haml
+++ b/app/views/phone_numbers/_form.html.haml
@@ -1,5 +1,7 @@
-#phone_number_form
-  = form_for [@vcard, @phone_number], :remote => true do |phone_number|
-    = phone_number.select :phone_number_type, ['Tel. privat', 'Tel. geschäft', 'Handy', 'Fax', 'E-Mail']
-    = phone_number.text_field :number, :size => 12, :autocomplete => 'off'
-    = phone_number.submit "Speichern"
+.nested-form-item
+  .control-group.string.optional
+    %label.select.optional.control-label= item.select :phone_number_type, ['Tel. geschäft', 'Tel. privat', 'Handy', 'Fax', 'E-Mail', 'Webseite']
+    .controls
+      = item.text_field :number, :autocomplete => 'off', :class => 'string optional'
+      = link_to content_tag(:i, '', :class => 'icon-trash delete-nested-form-item'), '#'
+    = item.hidden_field :_destroy
